--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -38,6 +38,8 @@
       >
         Sign in
       </button>
+      <p *ngIf="errorMessage" class="text text-danger">{{ errorMessage }}</p>
+      <a routerLink="/register">Create a new Account</a>
       <p class="mt-5 mb-3 text-muted">TweetUp © 2017–2022</p>
     </form>
   </div>
