--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -31,6 +31,11 @@
             >FAQ</a
           >
         </li>
+        <li class="nav-item" *ngIf="this.authService.isLoggedIn()">
+          <a class="nav-link active" aria-current="page" routerLink="/feed"
+            >Feed</a
+          >
+        </li>
         <li
           class="nav-item"
           *ngIf="this.authService.isLoggedIn()"
